--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 spring.application.name=spring-jpa-hibernate
 
 spring.thread-executor=virtual
-# spring.datasource.url=${DATABASE_URL}
 spring.datasource.url=jdbc:mysql://${DATABASE_URL}:3306/spring_jmeter
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=12345678
 
 spring.jpa.show-sql=true
+
+# spring.zipkin.base-url=http://localhost:9411
+
+# remove warn in spring
+spring.jpa.open-in-view=false 
+
+# idk
+decorator.datasource.flexy-pool.threshold.connection.acquire=-1
+decorator.datasource.flexy-pool.threshold.connection.lease=0
+
+# whenever make select * , jdbc driver wont commit to db immediately
+# spring wont open connection until reach code line that require connection to DB 
+spring.datasource.hikari.auto-commit=false
